--- a/test/solicitud.html
+++ b/test/solicitud.html
@@ -14,7 +14,7 @@
         <br>
         <input type="number" name="unidades">
         <br>
-       
+        <input type="submit" value="Enviar" name="solicitud">
     </form>
     <a href="./../login.php?close=close">
         Cerrar sesion
