--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú Hamburguesa</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/styleInicio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300&family=Lacquer&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap" rel="stylesheet"> 
 </head>
-
 <body>
     <input type="checkbox" id="invisibleCheckbox">
 
@@ -24,7 +22,6 @@
         <span class="lineaHamburguesa" id="linea3"></span>
     </div>
 
-
     <nav id="barraDesplegable">
         <img src="./img/LOGO.png" alt="logo" id="logo">
         <span id="nombreUsuario">jjsjsjsjsjsjjsjsjs</span>
@@ -33,7 +30,7 @@
         <li class="apartados">Hamburguesas</li>
         <li class="apartados">Complementos</li>
         <li class="apartados">Postres</li>
-        <li class="apartados">Bebidas</li>
+        <li class="apartados">Cerrar Sesión</li>
     </nav>
 
     <main id="contenedorTexto">
@@ -45,20 +42,20 @@
         <div id="contenedorTabla">
             <table>
                 <tr>
-                    <td>OPCION</td>
-                    <td>OPCION</td>
-                    <td>OPCION</td>
-                    <td>OPCION</td>
-                    <td>OPCION</td>
-                    <td>OPCION</td>
+                    <th>OPCION</th>
+                    <th>OPCION</th>
+                    <th>OPCION</th>
+                    <th>OPCION</th>
+                    <th>OPCION</th>
+                    <th>OPCION</th>
                 </tr>
                 <tr>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>6</td>
+                    <td>1sssssssssssss</td>
+                    <td>2ddddddddddddd</td>
+                    <td>3hhhhhhhhhhhhd</td>
+                    <td>44444444455555</td>
+                    <td>gggggggggsssss</td>
+                    <td>6ggggssssssssf</td>
                 </tr>
                 <tr>
                     <td>1</td>
@@ -135,8 +132,7 @@
             </table>
         </div>
 
-    </main>
-
+        </main>
+        
 </body>
-
 </html>
