--- a/test/registroProducto.html
+++ b/test/registroProducto.html
@@ -26,7 +26,7 @@
         <br>
         <input type="text" name="nif" id="" required>
         <br>
-        <input type="submit" name="submit" value="Enviar">
+        <input type="submit" name="enviar" value="Enviar">
     </form>
 </body>
 
