--- a/test/registro.html
+++ b/test/registro.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="./../registro.php" method="post" enctype="multipart/form-data">
+    <form action="../app/controller/registro.php" method="post" enctype="multipart/form-data">
         <input type="text" name="nombre" required>
         <br>
         <input type="email" name="correo" required>
